# hippocampus

./: CMakeLists.txt  LICENSE  README.md  brain.cpp  brain.h  codec_main.cpp  cortex.cpp  cortex.h  decay_calculator.cpp  decay_calculator.h  decaying_value.cpp  decaying_value.h  hc_channel.cpp  hc_channel.h  hippocampus.cpp  hippocampus.h  neuron.cpp  neuron.h  output_state.cpp  output_state.h  parameters.cpp  parameters.h  pavlov_main.cpp  predict_self_main.cpp  scheduled_spike.h  sequence_main.cpp  sequence_merger.cpp  sequence_merger.h  spike_queue.cpp  spike_queue.h  spike_scheduler.cpp  spike_scheduler.h  token.cpp  token.h  token_output.cpp  token_output.h
data/: economist.tok  tokens-20k.raw
